@@ -144,8 +144,8 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
 INSERT INTO `psss_config_awards` (`id`, `enabled`, `idx`, `negative`, `award_name`, `groupname`, `phrase`, `expr`, `order`, `where`, `limit`, `format`, `description`)
   VALUES
     (1, 1, 10, 0, 'Highest Single Season Team Win %', '', '{$team.link} has the highest historical single season win % at {$award.topteamvalue} in {$award.awardseason}', '{$win_percent}', 'desc', '{$games_played} > 81', 5, 'remzerodecimal', 'This Hall of Fame award is for the team with the highest single season winning percentage in league history.'),
-    (2, 1, 20, 0, 'Highest Single Season Average Runs Scored per Game', '', '{$team.link} has the highest historical single season average runs scored per game at {$award.value} in {$award.awardseason}', '{$run_support}', 'desc', '{$games_played} > 81', 5, '%.1f', 'This Hall of Fame award is for the team that has scored the highest average runs per game over a single season in league history.'),
-    (3, 1, 30, 0, 'Lowest Single Season Runs Allowed per 9 Innings', '', '{$team.link} has allowed the fewest runs per 9 innings in a single season at {$award.value} in {$award.awardseason}', '{$team_ra}', 'asc', '{$games_played} > 81', 5, '%.2f', 'This Hall of Fame award is for the team that has allowed the fewest runs per 9 innings in a single season in league history.'),
+    (2, 1, 20, 0, 'Highest Single Season Average Runs Scored per Game', '', '{$team.link} has the highest historical single season average runs scored per game at {$award.topteamvalue} in {$award.awardseason}', '{$run_support}', 'desc', '{$games_played} > 81', 5, '%.1f', 'This Hall of Fame award is for the team that has scored the highest average runs per game over a single season in league history.'),
+    (3, 1, 30, 0, 'Lowest Single Season Runs Allowed per 9 Innings', '', '{$team.link} has allowed the fewest runs per 9 innings in a single season at {$award.topteamvalue} in {$award.awardseason}', '{$team_ra}', 'asc', '{$games_played} > 81', 5, '%.2f', 'This Hall of Fame award is for the team that has allowed the fewest runs per 9 innings in a single season in league history.'),
     (4, 1, 40, 0, 'Highest Single Season Team Run Differential', '', '{$team.link} has the highest historical single season team run differential per 9 innings at {$award.topteamvalue} in {$award.awardseason}', '{$team_rdiff}', 'desc', '{$games_played} > 81', 5, '%.2f', 'This Hall of Fame award is for the team with the highest single season run differential per 9 innings in league history.'),
     (5, 1, 50, 0, 'Highest Single Season Team Defensive Rating', '', '{$team.link} has the highest historical single season team defensive rating at {$award.topteamvalue} in {$award.awardseason}', '{$team_drat}', 'desc', '{$games_played} > 81', 5, '%.2f', 'This Hall of Fame award is for the team with the highest single season team defensive rating in league history.'),
     (6, 1, 60, 0, 'Highest Single Season Team Speed Rating', '', '{$team.link} has the highest historical single season team speed rating at {$award.topteamvalue} in {$award.awardseason}', '{$team_srat}', 'desc', '{$games_played} > 81', 5, '%.2f', 'This Hall of Fame award is for the team with the highest single season team speed rating in league history.');
